# snake

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  originial_main_copy.cpp  snake.hpp  utility.hpp
